[package]
name = "sysmon_json"
version = "0.1.0"
edition = "2021"
authors = ["whiterabbit@protonmail.com"]

[dependencies]
rayon = "1.10.0" 
indicatif = "0.17.9"  
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
quick-xml = { version = "0.37.2", features = ["serialize"] }
walkdir = "2.5.0"
clap = "4.5.27"
env_logger = "0.11.6"
thiserror = "2.0.11"
log = "0.4.25"
sysmon_validator = { git = "https://github.com/whit3rabbit/sysmon-validator", branch = "main" }
tempfile = "3.15.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
